<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/team_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_name"
        android:textSize="32sp"
        android:layout_marginTop="150dp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@id/dog_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
     />


    <Button
        android:id="@+id/dog_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="dogSearch"
        android:layout_margin="35dp"
        android:text="@string/dog_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team_name_text"
        app:layout_constraintBottom_toTopOf="@id/A8_sticker"
        />

    <Button
        android:id="@+id/A8_sticker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:onClick="register"
        android:text="@string/send_sticker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dog_search" />

    <Button
        android:id="@+id/better_together"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:onClick="betterTogether"
        android:text="Better Together (Final)"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/A8_sticker" />



    <Button
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="about"
        android:text="About"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>