<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue_background">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/meditation_btn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/meditations_button"
        android:src="@mipmap/meditations"
        android:text="@string/meditation_button"
        android:onClick="clickActivity"
        android:textColor="@color/activity_button_text"
        app:layout_constraintEnd_toStartOf="@+id/affirmation_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/affirmation_btn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/affirmations_button"
        android:src="@mipmap/affirmations"
        android:text="@string/affirmation_button"
        android:onClick="clickActivity"
        android:textColor="@color/activity_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/yoga_btn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/yoga_button"
        android:src="@mipmap/yogapractice"
        android:text="@string/yoga_button"
        android:onClick="clickActivity"
        android:textColor="@color/activity_button_text"
        app:layout_constraintEnd_toStartOf="@+id/journal_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meditation_btn" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/journal_btn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/journaling_button"
        android:src="@mipmap/journaling"
        android:text="@string/journal_button"
        android:onClick="clickActivity"
        android:textColor="@color/activity_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/affirmation_btn" />

    <TextView
        android:id="@+id/activity_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alice"
        android:text="@string/activity_prompt"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/meditation_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_affirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="120dp"
        android:clickable="true"
        android:onClick="affirmation_popup"
        app:backgroundTint="@color/light_blue_menu"
        app:borderWidth="1dp"
        app:fabCustomSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/affirmation_btn"
        app:layout_constraintEnd_toEndOf="@+id/affirmation_btn"
        app:layout_constraintStart_toStartOf="@+id/affirmation_btn"
        app:layout_constraintTop_toTopOf="@+id/affirmation_btn"
        app:maxImageSize="15dp"
        app:srcCompat="@android:drawable/ic_dialog_info" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_meditate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="120dp"
        android:clickable="true"
        android:onClick="meditation_popup"
        app:backgroundTint="@color/light_blue_menu"
        app:borderWidth="1dp"
        app:fabCustomSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/meditation_btn"
        app:layout_constraintEnd_toEndOf="@+id/meditation_btn"
        app:layout_constraintStart_toStartOf="@+id/meditation_btn"
        app:layout_constraintTop_toTopOf="@+id/meditation_btn"
        app:maxImageSize="15dp"
        app:srcCompat="@android:drawable/ic_dialog_info" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_yoga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="120dp"
        android:clickable="true"
        android:onClick="yoga_popup"
        app:backgroundTint="@color/light_blue_menu"
        app:borderWidth="1dp"
        app:fabCustomSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/yoga_btn"
        app:layout_constraintEnd_toEndOf="@+id/yoga_btn"
        app:layout_constraintStart_toStartOf="@+id/yoga_btn"
        app:layout_constraintTop_toTopOf="@+id/yoga_btn"
        app:maxImageSize="15dp"
        app:srcCompat="@android:drawable/ic_dialog_info" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_journal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="120dp"
        android:clickable="true"
        android:onClick="journal_popup"
        app:backgroundTint="@color/light_blue_menu"
        app:borderWidth="1dp"
        app:fabCustomSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/journal_btn"
        app:layout_constraintEnd_toEndOf="@+id/journal_btn"
        app:layout_constraintStart_toStartOf="@+id/journal_btn"
        app:layout_constraintTop_toTopOf="@+id/journal_btn"
        app:maxImageSize="15dp"
        app:srcCompat="@android:drawable/ic_dialog_info" />

</androidx.constraintlayout.widget.ConstraintLayout>